# bwtui

./: .gitignore  Cargo.toml  LICENSE  README.md
.cursor/rules/: cargo-operations.mdc  writing-documentation.mdc
.github/workflows/: release.yml
ai_docs/: ARCHITECTURE.md  CACHING.md  CLI_INTEGRATION.md  CONTRIBUTING.md  DETAILS_PANEL.md  IMPLEMENTATION.md  PERFORMANCE.md  README.md  REFACTORING_SUMMARY.md  ROADMAP.md  SCROLLING.md  SESSION_ENCRYPTION.md  TECH_STACK.md  VAULT_UNLOCK.md
src/: app.rs  cache.rs  cli.rs  clipboard.rs  error.rs  events.rs  logger.rs  main.rs  mock_data.rs  session.rs  state.rs  terminal.rs  totp_util.rs  types.rs  ui.rs
src/actions/: copy.rs  filter.rs  mod.rs  navigation.rs  ui.rs
src/state/: mod.rs  status_message.rs  sync_state.rs  ui_state.rs  vault_state.rs
src/ui/: layout.rs  mod.rs  theme.rs
src/ui/dialogs/: mod.rs  not_logged_in.rs  password.rs  save_token.rs
src/ui/widgets/: clickable.rs  details.rs  entry_list.rs  mod.rs  search_box.rs  status_bar.rs  tab_bar.rs
