[package]
name = "bwtui"
version = "0.1.0"
edition = "2021"

[dependencies]
# TUI
ratatui = "0.24"
crossterm = "0.27"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Clipboard
arboard = "3.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }

# Filtering
fuzzy-matcher = "0.3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

