[package]
name = "bwtui"
version = "0.1.0"
edition = "2021"

[dependencies]
# TUI
ratatui = "0.30.0-alpha.5"
crossterm = "0.27"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Clipboard
arboard = "3.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
simplelog = "0.12"
regex = "1.10"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
strum = { version = "0.25", features = ["derive"] }

# Filtering
fuzzy-matcher = "0.3"

# Cache serialization
bincode = "1.3"
dirs = "5.0"

# Platform-specific encryption
keyring = "2.3"
whoami = "1.5"

[target.'cfg(windows)'.dependencies]
# Windows DPAPI for fallback encryption
winapi = { version = "0.3", features = ["dpapi", "wincrypt"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

